[gd_scene load_steps=97 format=2]

[ext_resource path="res://games/hideout_gouge/scripts/index.gd" type="Script" id=1]
[ext_resource path="res://games/hideout_gouge/assets/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki/walk_back_2.png" type="Texture" id=3]
[ext_resource path="res://games/hideout_gouge/scenes/planks.tscn" type="PackedScene" id=4]
[ext_resource path="res://games/hideout_gouge/scenes/owlBear.tscn" type="PackedScene" id=5]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki/attack_front_1.png" type="Texture" id=6]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki/walk_left_3.png" type="Texture" id=7]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki/attack_front_2.png" type="Texture" id=8]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki/walk_front_1.png" type="Texture" id=9]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki/walk_front_2.png" type="Texture" id=10]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki/walk_right_1.png" type="Texture" id=11]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki/walk_left_2.png" type="Texture" id=12]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki/walk_left_1.png" type="Texture" id=13]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki/walk_back_1.png" type="Texture" id=14]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki/iddle_front.png" type="Texture" id=15]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki/iddle_back.png" type="Texture" id=16]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki/iddle_right.png" type="Texture" id=17]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki/iddle_left.png" type="Texture" id=18]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_3/walk_left_2.png" type="Texture" id=19]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_2/attack_right_2.png" type="Texture" id=20]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki/attack_left_2.png" type="Texture" id=21]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_3/walk_left_3.png" type="Texture" id=22]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_2/walk_left_2.png" type="Texture" id=23]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_2/iddle_right.png" type="Texture" id=24]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_2/attack_right_1.png" type="Texture" id=25]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_3/walk_right_1.png" type="Texture" id=26]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_2/iddle_back.png" type="Texture" id=27]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_2/attack_front_2.png" type="Texture" id=28]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_2/walk_right_1.png" type="Texture" id=29]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_2/walk_front_2.png" type="Texture" id=30]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_2/walk_left_3.png" type="Texture" id=31]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_3/iddle_left.png" type="Texture" id=32]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_3/iddle_right.png" type="Texture" id=33]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_3/walk_back_2.png" type="Texture" id=34]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_2/walk_back_2.png" type="Texture" id=35]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_2/attack_back_1.png" type="Texture" id=36]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_3/iddle_back.png" type="Texture" id=37]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_2/attack_front_1.png" type="Texture" id=38]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_2/attack_back_2.png" type="Texture" id=39]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_3/walk_front_1.png" type="Texture" id=40]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_2/iddle_front.png" type="Texture" id=41]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_2/attack_left.png" type="Texture" id=42]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_2/attack_left_2.png" type="Texture" id=43]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_3/iddle_front.png" type="Texture" id=44]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_3/walk_back_1.png" type="Texture" id=45]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_2/walk_front_1.png" type="Texture" id=46]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_3/walk_front_2.png" type="Texture" id=47]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_2/walk_left_1.png" type="Texture" id=48]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_2/iddle_left.png" type="Texture" id=49]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_3/walk_left_1.png" type="Texture" id=50]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_3/attack_left.png" type="Texture" id=51]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_3/attack_back_2.png" type="Texture" id=52]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_3/attack_back_1.png" type="Texture" id=53]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_3/attack_left_2.png" type="Texture" id=54]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_3/attack_right_2.png" type="Texture" id=55]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_3/attack_front_1.png" type="Texture" id=56]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_3/attack_front_2.png" type="Texture" id=57]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_3/attack_right_1.png" type="Texture" id=58]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki/attack_left.png" type="Texture" id=59]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki/attack_right_2.png" type="Texture" id=60]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki/attack_back_2.png" type="Texture" id=61]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki/attack_right_1.png" type="Texture" id=62]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki/attack_back_1.png" type="Texture" id=63]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_4/iddle_front.png" type="Texture" id=64]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_4/walk_left_3.png" type="Texture" id=65]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_4/walk_left_2.png" type="Texture" id=66]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_4/walk_front_1.png" type="Texture" id=67]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_4/walk_left_1.png" type="Texture" id=68]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_4/attack_right_2.png" type="Texture" id=69]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_4/attack_back_1.png" type="Texture" id=70]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_4/walk_front_2.png" type="Texture" id=71]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_4/attack_back_2.png" type="Texture" id=72]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_4/attack_right_1.png" type="Texture" id=73]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_4/attack_front_1.png" type="Texture" id=74]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_4/walk_back_2.png" type="Texture" id=75]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_4/iddle_right.png" type="Texture" id=76]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_4/walk_right_1.png" type="Texture" id=77]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_4/attack_left.png" type="Texture" id=78]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_4/iddle_back.png" type="Texture" id=79]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_4/iddle_left.png" type="Texture" id=80]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_4/walk_back_1.png" type="Texture" id=81]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_4/attack_front_2.png" type="Texture" id=82]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_4/attack_left_2.png" type="Texture" id=83]
[ext_resource path="res://games/hideout_gouge/scenes/FireClock.tscn" type="PackedScene" id=84]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_2/die.png" type="Texture" id=85]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_3/die.png" type="Texture" id=86]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki_4/die.png" type="Texture" id=87]
[ext_resource path="res://games/hideout_gouge/assets/tanoki/tanoki/die.png" type="Texture" id=88]
[ext_resource path="res://games/hideout_gouge/assets/music/prelude.wav" type="AudioStream" id=89]
[ext_resource path="res://games/hideout_gouge/assets/music/end_fanfare.wav" type="AudioStream" id=90]
[ext_resource path="res://games/hideout_gouge/assets/music/theme.wav" type="AudioStream" id=91]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 9 ), ExtResource( 15 ), ExtResource( 10 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 11 ), ExtResource( 17 ), ExtResource( 12 ) ],
"loop": true,
"name": "walk_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 8 ) ],
"loop": true,
"name": "attack_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 63 ), ExtResource( 61 ) ],
"loop": true,
"name": "attack_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 13 ), ExtResource( 18 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 62 ), ExtResource( 60 ) ],
"loop": true,
"name": "attack_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 59 ), ExtResource( 21 ) ],
"loop": true,
"name": "attack_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "iddle_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 88 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "iddle_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "iddle_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "iddle_right",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 41 ), ExtResource( 46 ), ExtResource( 41 ), ExtResource( 30 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 29 ), ExtResource( 24 ), ExtResource( 23 ) ],
"loop": true,
"name": "walk_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 35 ), ExtResource( 27 ), ExtResource( 35 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 38 ), ExtResource( 28 ) ],
"loop": true,
"name": "attack_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 39 ) ],
"loop": true,
"name": "attack_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 49 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 31 ) ],
"loop": true,
"name": "walk_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 20 ) ],
"loop": true,
"name": "attack_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 43 ) ],
"loop": true,
"name": "attack_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 41 ) ],
"loop": true,
"name": "iddle_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 85 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ) ],
"loop": true,
"name": "iddle_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 49 ) ],
"loop": true,
"name": "iddle_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "iddle_right",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 44 ), ExtResource( 40 ), ExtResource( 44 ), ExtResource( 47 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 26 ), ExtResource( 33 ), ExtResource( 19 ) ],
"loop": true,
"name": "walk_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 45 ), ExtResource( 37 ), ExtResource( 34 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 56 ), ExtResource( 57 ) ],
"loop": true,
"name": "attack_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 53 ), ExtResource( 52 ) ],
"loop": true,
"name": "attack_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 50 ), ExtResource( 32 ), ExtResource( 22 ) ],
"loop": true,
"name": "walk_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 58 ), ExtResource( 55 ) ],
"loop": true,
"name": "attack_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 51 ), ExtResource( 54 ) ],
"loop": true,
"name": "attack_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 44 ) ],
"loop": true,
"name": "iddle_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 86 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 37 ) ],
"loop": true,
"name": "iddle_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ) ],
"loop": true,
"name": "iddle_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ) ],
"loop": true,
"name": "iddle_right",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 64 ), ExtResource( 67 ), ExtResource( 64 ), ExtResource( 71 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 76 ), ExtResource( 77 ), ExtResource( 76 ), ExtResource( 66 ) ],
"loop": true,
"name": "walk_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 79 ), ExtResource( 81 ), ExtResource( 79 ), ExtResource( 75 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 74 ), ExtResource( 82 ) ],
"loop": true,
"name": "attack_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 70 ), ExtResource( 72 ) ],
"loop": true,
"name": "attack_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 80 ), ExtResource( 68 ), ExtResource( 80 ), ExtResource( 65 ) ],
"loop": true,
"name": "walk_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 73 ), ExtResource( 69 ) ],
"loop": true,
"name": "attack_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 78 ), ExtResource( 83 ) ],
"loop": true,
"name": "attack_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 64 ) ],
"loop": true,
"name": "iddle_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 87 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 79 ) ],
"loop": true,
"name": "iddle_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 80 ) ],
"loop": true,
"name": "iddle_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 76 ) ],
"loop": true,
"name": "iddle_right",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1011.32, 10 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="TileMap" type="TileMap" parent="Navigation2D" groups=[
"Tiles",
]]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 65556, 1, 0, 65557, 1, 0, 65558, 1, 0, 65559, 1, 0, 65560, 1, 0, 65561, 1, 0, 65562, 1, 0, 65563, 1, 0, 65564, 1, 0, 65565, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 131092, 1, 0, 131093, 1, 0, 131094, 1, 0, 131095, 1, 0, 131096, 1, 0, 131097, 1, 0, 131098, 1, 0, 131099, 1, 0, 131100, 1, 0, 131101, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196626, 1, 0, 196627, 1, 0, 196628, 1, 0, 196629, 1, 0, 196630, 1, 0, 196631, 1, 0, 196632, 1, 0, 196633, 1, 0, 196634, 1, 0, 196635, 1, 0, 196636, 1, 0, 196637, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 262164, 1, 0, 262165, 1, 0, 262166, 1, 0, 262167, 1, 0, 262168, 1, 0, 262169, 1, 0, 262170, 1, 0, 262171, 1, 0, 262172, 1, 0, 262173, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 327700, 1, 0, 327701, 1, 0, 327702, 1, 0, 327703, 1, 0, 327704, 1, 0, 327705, 1, 0, 327706, 1, 0, 327707, 1, 0, 327708, 1, 0, 327709, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 1, 0, 393235, 1, 0, 393236, 1, 0, 393237, 1, 0, 393238, 1, 0, 393239, 1, 0, 393240, 1, 0, 393241, 1, 0, 393242, 1, 0, 393243, 1, 0, 393244, 1, 0, 393245, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 1, 0, 458772, 1, 0, 458773, 1, 0, 458774, 1, 0, 458775, 1, 0, 458776, 1, 0, 458777, 1, 0, 458778, 1, 0, 458779, 1, 0, 458780, 1, 0, 458781, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 1, 0, 524308, 1, 0, 524309, 1, 0, 524310, 1, 0, 524311, 1, 0, 524312, 1, 0, 524313, 1, 0, 524314, 1, 0, 524315, 1, 0, 524316, 1, 0, 524317, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 1, 0, 589844, 1, 0, 589845, 1, 0, 589846, 1, 0, 589847, 1, 0, 589848, 1, 0, 589849, 1, 0, 589850, 1, 0, 589851, 1, 0, 589852, 1, 0, 589853, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 1, 0, 655379, 1, 0, 655380, 1, 0, 655381, 1, 0, 655382, 1, 0, 655383, 1, 0, 655384, 1, 0, 655385, 1, 0, 655386, 1, 0, 655387, 1, 0, 655388, 1, 0, 655389, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 1, 0, 720917, 1, 0, 720918, 1, 0, 720919, 1, 0, 720920, 1, 0, 720921, 1, 0, 720922, 1, 0, 720923, 1, 0, 720924, 1, 0, 720925, 1, 0, 786432, 1, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786451, 1, 0, 786452, 1, 0, 786453, 1, 0, 786454, 1, 0, 786455, 1, 0, 786456, 1, 0, 786457, 1, 0, 786458, 1, 0, 786459, 1, 0, 786460, 1, 0, 786461, 1, 0, 851968, 1, 0, 851969, 1, 0, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 851987, 1, 0, 851988, 1, 0, 851989, 1, 0, 851990, 1, 0, 851991, 1, 0, 851992, 1, 0, 851993, 1, 0, 851994, 1, 0, 851995, 1, 0, 851996, 1, 0, 851997, 1, 0, 917504, 1, 0, 917505, 1, 0, 917506, 1, 0, 917507, 1, 0, 917508, 1, 0, 917509, 1, 0, 917510, 1, 0, 917511, 1, 0, 917512, 1, 0, 917513, 1, 0, 917514, 1, 0, 917515, 1, 0, 917516, 1, 0, 917517, 1, 0, 917518, 1, 0, 917519, 1, 0, 917520, 1, 0, 917521, 1, 0, 917522, 1, 0, 917523, 1, 0, 917524, 1, 0, 917525, 1, 0, 917526, 1, 0, 917527, 1, 0, 917528, 1, 0, 917529, 1, 0, 917530, 1, 0, 917531, 1, 0, 917532, 1, 0, 917533, 1, 0, 983040, 1, 0, 983041, 1, 0, 983042, 1, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983048, 1, 0, 983049, 1, 0, 983050, 1, 0, 983051, 1, 0, 983052, 1, 0, 983053, 1, 0, 983054, 1, 0, 983055, 1, 0, 983056, 1, 0, 983057, 1, 0, 983058, 1, 0, 983059, 1, 0, 983060, 1, 0, 983061, 1, 0, 983062, 1, 0, 983063, 1, 0, 983064, 1, 0, 983065, 1, 0, 983066, 1, 0, 983067, 1, 0, 983068, 1, 0, 983069, 1, 0, 1048576, 1, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048591, 1, 0, 1048592, 1, 0, 1048593, 1, 0, 1048594, 1, 0, 1048595, 1, 0, 1048596, 1, 0, 1048597, 1, 0, 1048598, 1, 0, 1048599, 1, 0, 1048600, 1, 0, 1048601, 1, 0, 1048602, 1, 0, 1048603, 1, 0, 1048604, 1, 0, 1048605, 1, 0 )

[node name="FireClock" parent="Navigation2D" instance=ExtResource( 84 )]
position = Vector2( 1000, 550 )

[node name="Players" type="Node2D" parent="."]

[node name="Positions" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Positions"]
light_mask = 3
position = Vector2( 990, 370 )

[node name="Position2D2" type="Position2D" parent="Positions"]
position = Vector2( 802, 555 )

[node name="Position2D3" type="Position2D" parent="Positions"]
position = Vector2( 1170, 555 )

[node name="Position2D4" type="Position2D" parent="Positions"]
position = Vector2( 990, 730 )

[node name="Timer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="RichTextLabel" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.503923
anchor_right = 0.5
anchor_bottom = 0.503923
margin_left = -181.339
margin_top = -329.096
margin_right = -88.3391
margin_bottom = -249.096
rect_scale = Vector2( 10, 10 )
rect_pivot_offset = Vector2( 26, 7 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Planks" parent="." instance=ExtResource( 4 )]
position = Vector2( 0.228149, -7.8219 )

[node name="owlBear" parent="." instance=ExtResource( 5 )]
position = Vector2( 1000, 550 )

[node name="PlayerAnimations" type="Node2D" parent="."]

[node name="anim_player_0" type="AnimatedSprite" parent="PlayerAnimations"]
position = Vector2( -137.136, 337.701 )
scale = Vector2( 1.8, 1.8 )
frames = SubResource( 1 )
animation = "die"

[node name="anim_player_1" type="AnimatedSprite" parent="PlayerAnimations"]
position = Vector2( -116.339, 136.98 )
scale = Vector2( 1.8, 1.8 )
frames = SubResource( 2 )
animation = "die"

[node name="anim_player_2" type="AnimatedSprite" parent="PlayerAnimations"]
position = Vector2( -113.709, 221.165 )
scale = Vector2( 1.8, 1.8 )
frames = SubResource( 3 )
animation = "die"

[node name="anim_player_3" type="AnimatedSprite" parent="PlayerAnimations"]
position = Vector2( -108.194, 67.1694 )
scale = Vector2( 1.8, 1.8 )
frames = SubResource( 4 )
animation = "die"

[node name="PreparationTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="Borders" type="KinematicBody2D" parent="."]
position = Vector2( 2.42838, -13.963 )
collision_layer = 1025
collision_mask = 1025

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders"]
position = Vector2( 918.582, 13.4853 )
shape = SubResource( 5 )

[node name="Borders3" type="KinematicBody2D" parent="."]
position = Vector2( 2.42838, -13.963 )
collision_layer = 1025
collision_mask = 1025

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders3"]
position = Vector2( 926.682, 1107.05 )
shape = SubResource( 5 )

[node name="Borders2" type="KinematicBody2D" parent="."]
position = Vector2( 2.42838, -13.963 )
collision_layer = 1025
collision_mask = 1025

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders2"]
position = Vector2( 1925.19, 342.872 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Borders2"]
position = Vector2( -18.9176, 286.169 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="victory_fanfare" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 1000, 500 )
scale = Vector2( 100, 100 )
stream = ExtResource( 90 )
volume_db = 10.0

[node name="theme" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 997.575, 500 )
scale = Vector2( 100, 100 )
stream = ExtResource( 91 )
volume_db = 10.0

[node name="Phase2Timer" type="Timer" parent="."]
wait_time = 90.0
one_shot = true
autostart = true

[node name="prelude" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 1001.98, 549.842 )
stream = ExtResource( 89 )
volume_db = 10.0
autoplay = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="timeout" from="Timer" to="owlBear" method="_on_GameTimer_timeout"]
[connection signal="timeout" from="Timer" to="Navigation2D/FireClock" method="_on_GameTimer_timeout"]
[connection signal="timeout" from="PreparationTimer" to="owlBear" method="_on_PreparationTimer_timeout"]
[connection signal="timeout" from="PreparationTimer" to="." method="_on_PreparationTimer_timeout"]
[connection signal="timeout" from="Phase2Timer" to="owlBear" method="_on_Phase2Timer_timeout"]
